fixed gap

--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -71,9 +71,10 @@
 .subtitle {
   text-align: center;
   color: white;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .link {
+  margin-left: 8px;
   text-decoration: underline;
 }
