--- a/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/src/components/RegistrationForm/RegistrationForm.module.css
@@ -69,11 +69,12 @@
 }
 
 .subtitle {
-  font-size: 12px;
+  font-size: 14px;
   text-align: center;
   color: white;
 }
 
 .link {
+  margin-left: 8px;
   text-decoration: underline;
 }
